--- a/NearBy/View/PlacesTableViewCell.xib
+++ b/NearBy/View/PlacesTableViewCell.xib
@@ -17,7 +17,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="81"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qfb-VB-8cj">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qfb-VB-8cj" customClass="CustomImageView" customModule="NearBy" customModuleProvider="target">
                         <rect key="frame" x="16" y="8" width="68" height="65"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="68" id="6xp-sN-lsq"/>
@@ -54,7 +54,7 @@
             <connections>
                 <outlet property="address" destination="xGx-9j-Q92" id="Oot-HX-eOq"/>
                 <outlet property="name" destination="Ljl-mc-ukV" id="HOd-23-luL"/>
-                <outlet property="placeImage" destination="qfb-VB-8cj" id="jXG-pj-k15"/>
+                <outlet property="placeImage" destination="qfb-VB-8cj" id="Vep-KB-5bt"/>
             </connections>
             <point key="canvasLocation" x="95.652173913043484" y="134.26339285714286"/>
         </tableViewCell>
